# DetectNTrack

./: .gitignore  CMakeLists.txt  CMakePresets.json  README  vcpkg.json
src/: omnispace.cpp  parallel.cpp  single.cpp
src/include/: omniqueue.hpp  omnispace.hpp
